--- a/portfolio004-1/src/App.scss
+++ b/portfolio004-1/src/App.scss
@@ -2,13 +2,15 @@ body {
   top: 0;
   left: 0;
   margin: 0;
+  overscroll-behavior: none;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .homepage-body {
-  display: grid;
+  // display: grid;
   width: 100vw;
   height: 100vh;
-  grid-template-columns: repeat(24, 1fr);
-  grid-template-rows: repeat(24, 1fr);
+  // grid-template-columns: repeat(24, 1fr);
+  // grid-template-rows: repeat(24, 1fr);
   top: 0;
   left: 0;
   margin: 0;
