--- a/portfolio004-1/src/projects/projects.scss
+++ b/portfolio004-1/src/projects/projects.scss
@@ -1,3 +1,17 @@
+#scroll-section-outer {
+  overflow: hidden;
+}
+#scroll-section-inner {
+  height: 100vh;
+  // width: 400vw;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+}
+#project-start {
+  width: 100vw;
+  height: 100vh;
+}
 .prj {
   height: 100vh;
   width: 100vw;
@@ -14,18 +28,24 @@
     grid-column: 3/26;
     height: 100%;
     width: 100%;
+    // opacity: 0.95;
+    z-index: -1;
   }
   .prj-second-body {
     grid-row: 5/24;
     grid-column: 26/39;
     height: 100%;
     width: 100%;
+    // opacity: 0.95;
+    z-index: -1;
   }
   .prj-menu-button {
     grid-row: 2/5;
     grid-column: 3/14;
     height: 100%;
     width: 100%;
+    // opacity: 0.75;
+    z-index: -1;
   }
   .menu {
     grid-row: 2/5;
@@ -33,12 +53,15 @@
     z-index: 1;
     display: flex;
     justify-content: end;
+    font-weight: 200;
   }
   .prj-build-button {
     grid-row: 2/5;
     grid-column: 14/26;
     height: 100%;
     width: 100%;
+    // opacity: 0.75;
+    z-index: -1;
   }
   .build {
     grid-row: 2/5;
@@ -46,12 +69,15 @@
     z-index: 1;
     display: flex;
     justify-content: end;
+    font-weight: 200;
   }
   .prj-back-to-top-button {
     grid-row: 2/5;
     grid-column: 26/39;
     height: 100%;
     width: 100%;
+    // opacity: 0.75;
+    z-index: -1;
   }
   .start {
     grid-row: 2/5;
@@ -62,33 +88,35 @@
     align-self: flex-end;
     margin-top: auto;
     font-size: 1.4rem;
+    font-weight: 200;
   }
   .prj-view {
     grid-row: 19/22;
     grid-column: 4/25;
-    display: grid;
-    grid-template-columns: repeat(11, 1fr);
-    grid-template-rows: repeat(11, 1fr);
+
     height: 100%;
     width: 51.2vw;
     z-index: 1;
     margin: 0vw 0vw 1vw 0.5vw;
-    .prj-view-button {
-      grid-row: 1/12;
-      grid-column: 1/12;
-      width: 100%;
-    }
-    .prj-view-title {
-      color: white;
-      grid-row: 1/12;
-      grid-column: 5/12;
-      display: flex;
-      justify-content: end;
-      align-items: center;
-      text-align: end;
-      font-size: 2vw;
-      margin: 0vh 3vw 0 0;
-    }
+  }
+  .prj-view-title {
+    // color: white;
+    border: 2px solid #000000;
+    color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 45px;
+    grid-row: 19/22;
+    grid-column: 5/26;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    text-align: end;
+    z-index: 2;
+    font-size: 2vw;
+    padding-right: 5vw;
+    // padding-left: 5vw;
+
+    margin: 0vh 2.5vw 0 -1.6vw;
   }
   .prj-forward-button {
     grid-row: 20/24;
@@ -150,11 +178,13 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 300;
     margin-left: 0.5vw;
-    font-size: 0.8rem;
+    font-size: 0.85vw;
     font-weight: 900;
   }
   #spec {
-    border: 2px solid #000; /* 1px solid border with a black color */
+    // border: 2px solid #000000;
+    color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.884);
     display: inline-block; /* or use 'display: inline;' */
     margin: 0.3vw;
     padding: 0.8vw;
@@ -178,22 +208,33 @@
     margin: -4vh -0.5vw 0.5vw 1.2vw;
     width: 89%;
   }
-  // .info {
-  //   grid-row: 11/12;
-  //   grid-column: 4/24;
-  //   font-weight: 100;
-  //   font-size: 100%;
-  //   margin-right: 2vw;
-  //   margin-left: 0.5vw;
-  //   text-align: left;
-  // }
-  .number {
-    grid-row: 21;
-    grid-column: 32;
-    font-size: 1.7vw;
-    margin: 1vh 0 0 0;
+  #info {
+    border: 2px solid #000000;
+    color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
+    grid-row: 20/22;
+    grid-column: 30/35;
+    font-weight: 600;
+    font-size: 1.3vw;
+    padding: 10%;
+    // margin-right: 2vw;
+    border-radius: 45px;
+    // margin-top: 2vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    place-items: center;
+  }
+  .number {
+    grid-row: 22;
+    grid-column: 37;
+    font-size: 1.1vw;
+    margin: 1vh 0 0 0;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    text-align: end;
+    place-items: end;
   }
 }
