--- a/portfolio004-1/src/homepage/homepage.scss
+++ b/portfolio004-1/src/homepage/homepage.scss
@@ -3,11 +3,13 @@
 .banner {
   width: 100vw;
   height: 40vh;
-  background-color: white;
+  background-color: #00445238;
+  backdrop-filter: blur(30px);
   display: grid;
   grid-template-columns: repeat(20, 1fr);
   grid-template-rows: repeat(20, 1fr);
-
+  #blur {
+  }
   h1 {
     font-family: "Audiowide", sans-serif;
     font-size: 180px;
@@ -16,9 +18,13 @@
     justify-content: center;
     grid-row: 1/21;
     grid-column: 1/21;
+    // border: 1px white solid;
+    color: rgba(255, 255, 255, 0);
+    -webkit-text-stroke: #ffffff;
+    -webkit-text-stroke-width: 0.5px;
   }
   .horizontal-line {
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #ffffff;
     width: 100vw;
   }
   .first {
@@ -37,6 +43,7 @@
     justify-content: baseline;
     margin-top: 0.5vh;
     margin-left: 0vh;
+    color: white;
   }
   .portfolio-004 {
     font-family: Arial, Helvetica, sans-serif;
@@ -44,10 +51,11 @@
     grid-column: 10/16;
     grid-row: 1/3;
     margin-top: 0.5vh;
+    color: white;
   }
   .time {
     font-family: Arial, Helvetica, sans-serif;
-    color: rgba(0, 0, 0, 0.5);
+    color: white;
     font-size: smaller;
     font-weight: 50;
     grid-column: 1/5;
