--- a/portfolio004-1/src/projects/projects.scss
+++ b/portfolio004-1/src/projects/projects.scss
@@ -1,12 +1,14 @@
 #scroll-section-outer {
-  overflow: hidden;
+  overflow-x: hidden;
+  position: relative;
 }
 #scroll-section-inner {
   height: 100vh;
-  // width: 400vw;
+  // width: 500vw;
   display: flex;
-  flex-direction: row;
-  position: relative;
+  flex-wrap: nowrap;
+
+  // flex-direction: row;
 }
 #project-start {
   width: 100vw;
@@ -16,107 +18,72 @@
   height: 100vh;
   width: 100vw;
   display: grid;
-  grid-template-columns: repeat(40, 1fr);
-  grid-template-rows: repeat(24, 1fr);
+  grid-template-columns: repeat(39, 1fr);
+  grid-template-rows: repeat(23, 1fr);
   border: 1px solid red;
   h3 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
   }
   .prj-main-body {
-    grid-row: 5/24;
-    grid-column: 3/26;
+    grid-row: 3/22;
+    grid-column: 11/30;
     height: 100%;
     width: 100%;
+    background-color: #00445238;
+    backdrop-filter: blur(30px);
+    // border: 2px solid;
+    // border-image: linear-gradient(to bottom right, white, transparent) 1;
+    // border-radius: 30px;
+    /* Adjust the gradient direction and colors as needed */
     // opacity: 0.95;
+    border-radius: 30px;
     z-index: -1;
   }
-  .prj-second-body {
-    grid-row: 5/24;
-    grid-column: 26/39;
+  .prj-main-border {
+    grid-row: 3/22;
+    grid-column: 11/30;
     height: 100%;
     width: 100%;
-    // opacity: 0.95;
-    z-index: -1;
   }
-  .prj-menu-button {
-    grid-row: 2/5;
-    grid-column: 3/14;
-    height: 100%;
-    width: 100%;
-    // opacity: 0.75;
-    z-index: -1;
-  }
+
   .menu {
-    grid-row: 2/5;
-    grid-column: 3/13;
-    z-index: 1;
-    display: flex;
-    justify-content: end;
-    font-weight: 200;
+    color: white;
+    grid-row: 6/8;
+    grid-column: 21/29;
+    margin: 1vw 0vw 0 0.5vw;
+    text-align: right;
+    font-weight: 100;
+    font-size: 1.5vw;
+    .cross {
+      height: 20%;
+      width: auto;
+      top: 0%;
+      left: 0%;
+      margin: auto;
+      padding-right: 0.2vw;
+    }
   }
-  .prj-build-button {
-    grid-row: 2/5;
-    grid-column: 14/26;
-    height: 100%;
-    width: 100%;
-    // opacity: 0.75;
-    z-index: -1;
-  }
-  .build {
-    grid-row: 2/5;
-    grid-column: 14/25;
-    z-index: 1;
-    display: flex;
-    justify-content: end;
-    font-weight: 200;
-  }
-  .prj-back-to-top-button {
-    grid-row: 2/5;
-    grid-column: 26/39;
-    height: 100%;
-    width: 100%;
-    // opacity: 0.75;
-    z-index: -1;
-  }
+
+  //
   .start {
-    grid-row: 2/5;
-    grid-column: 25/38;
-    z-index: 1;
-    display: flex;
-    justify-content: end;
-    align-self: flex-end;
-    margin-top: auto;
-    font-size: 1.4rem;
-    font-weight: 200;
+    color: white;
+    grid-row: 4/6;
+    grid-column: 21/29;
+    margin: 1vw 0vw 0 0.5vw;
+    text-align: right;
+    font-weight: 100;
+    font-size: 1.5vw;
   }
-  .prj-view {
-    grid-row: 19/22;
-    grid-column: 4/25;
 
-    height: 100%;
-    width: 51.2vw;
-    z-index: 1;
-    margin: 0vw 0vw 1vw 0.5vw;
-  }
   .prj-view-title {
-    // color: white;
-    border: 2px solid #000000;
-    color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0);
-    border-radius: 45px;
-    grid-row: 19/22;
-    grid-column: 5/26;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    text-align: end;
-    z-index: 2;
-    font-size: 2vw;
-    padding-right: 5vw;
-    // padding-left: 5vw;
-
-    margin: 0vh 2.5vw 0 -1.6vw;
+    color: white;
+    grid-row: 8/10;
+    grid-column: 21/29;
+    margin: 1vw 0vw 0 0.5vw;
+    text-align: right;
+    font-weight: 100;
+    font-size: 1.5vw;
   }
   .prj-forward-button {
     grid-row: 20/24;
@@ -136,99 +103,107 @@
 
     z-index: 1;
   }
+  .info {
+    // in use
+    grid-row: 13/20;
+    grid-column: 21/29;
+    color: white;
+    margin: 0vw 0vw 0.2vw 0.5vw;
+    text-align: right;
+    font-weight: 100;
+    font-size: 0.75vw;
+    display: flex;
+    justify-content: end;
+    align-items: flex-end;
+  }
   .title {
-    grid-row: 9/11;
-    grid-column: 4/21;
-    font-size: 3em;
+    // in use
+    grid-row: 13/17;
+    grid-column: 20/28;
+    font-size: 2.5em;
+    color: white;
     display: flex;
     justify-content: start;
-    align-items: flex-end;
-    margin: 0vw 0vw 0 0.5vw;
+    align-items: flex-start;
+    margin: -1vw 0vw 0 1.5vw;
     font-weight: 200;
+    z-index: 3;
+    text-transform: capitalize;
   }
   .horizontal-line {
-    width: 97.9%;
+    // in use
+    width: 100%;
 
     margin: 0vw 0vw 0 0.5vw;
 
-    background-color: #000;
-    height: 10%;
+    background-color: #ffffff;
+    height: 5%;
     // border: 1px solid #000; /* Set border color and style */
-    grid-row: 12;
-    grid-column: 4/24;
+    // grid-row: 12;
+    // grid-column: 4/24;
   }
   .title-line {
-    grid-row: 12;
-    grid-column: 4/25;
+    grid-row: 19;
+    grid-column: 12/20;
+    margin-left: -0.5vw;
+    margin-top: 3.5vh;
   }
   .image-section {
-    grid-row: 6/12;
-    grid-column: 28/37;
-    width: 90%;
-    margin-top: 3vh;
-    margin-left: 0.8vw;
-    height: 90%;
+    grid-row: 3/15;
+    grid-column: 11/22;
+    width: 85%;
+    height: 75%;
+
+    // margin-left: 0.8vw;
     z-index: 2;
-    border-radius: 1px;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
+    border: 1px white solid;
+    border-radius: 30px 0 30px 0;
   }
   .proj-specs {
-    grid-row: 13/16;
-    grid-column: 28/36;
+    grid-row: 12/15;
+    grid-column: 11/19;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 300;
-    margin-left: 0.5vw;
+    margin: 1.5vw;
     font-size: 0.85vw;
     font-weight: 900;
   }
   #spec {
     // border: 2px solid #000000;
     color: rgb(255, 255, 255);
-    background-color: rgba(0, 0, 0, 0.884);
     display: inline-block; /* or use 'display: inline;' */
     margin: 0.3vw;
     padding: 0.8vw;
+    border: 1px white solid;
     border-radius: 25px;
   }
   #spec-title {
-    grid-row: 18;
-    grid-column: 35/37;
-    margin: 0vw 0.5vw -0.5vw 0.5vw;
+    grid-row: 18/19;
+    grid-column: 18/20;
+    margin: 0vw 0vw -0.5vw 0.5vw;
     padding: 0.8vw;
-    font-weight: 600;
+    font-weight: 300;
     font-size: 1.2rem;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
+    color: rgb(255, 255, 255);
+
     text-align: right;
     justify-content: flex-end;
   }
   #spec-line {
-    grid-row: 20;
-    grid-column: 28/37;
+    grid-row: 8/19;
+    grid-column: 29;
     margin: -4vh -0.5vw 0.5vw 1.2vw;
-    width: 89%;
+    width: 1%;
+    height: 100%;
   }
-  #info {
-    border: 2px solid #000000;
-    color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0);
-    grid-row: 20/22;
-    grid-column: 30/35;
-    font-weight: 600;
-    font-size: 1.3vw;
-    padding: 10%;
-    // margin-right: 2vw;
-    border-radius: 45px;
-    // margin-top: 2vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    place-items: center;
-  }
+
   .number {
-    grid-row: 22;
-    grid-column: 37;
+    grid-row: 20;
+    grid-column: 28;
+    color: white;
+
     font-size: 1.1vw;
     margin: 1vh 0 0 0;
     display: flex;
