--- a/portfolio004-1/src/homepage/homepage.scss
+++ b/portfolio004-1/src/homepage/homepage.scss
@@ -2,65 +2,108 @@
 
 .banner {
   width: 100vw;
-  height: 40vh;
-  background-color: #00445238;
+  height: 100vh;
+  background-color: #ffffff38;
   backdrop-filter: blur(30px);
   display: grid;
   grid-template-columns: repeat(20, 1fr);
   grid-template-rows: repeat(20, 1fr);
-  #blur {
+  -webkit-text-stroke: #000000;
+  -webkit-text-stroke-width: 0.5px;
+}
+
+#blur {
+}
+h1 {
+  font-family: "Audiowide", sans-serif;
+  font-size: 180px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-row: 1/21;
+  grid-column: 1/21;
+  // border: 1px rgb(0, 0, 0) solid;
+  color: rgba(255, 255, 255, 0);
+}
+.horizontal-line-main {
+  border-bottom: 1px solid #000000;
+  width: 100vw;
+}
+.first {
+  grid-column: 1/21;
+  grid-row: 1;
+}
+.second {
+  grid-column: 1/21;
+  grid-row: 19;
+}
+.menu {
+  font-family: Arial, Helvetica, sans-serif;
+  grid-column: 20/21;
+  grid-row: 1/3;
+  display: flex;
+  justify-content: baseline;
+  margin-top: 0.5vh;
+  margin-left: 0vh;
+  color: white;
+}
+.portfolio-004 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 50;
+  grid-column: 17/26;
+  grid-row: 1/3;
+  margin-top: 0.5vh;
+  margin-right: 1vh;
+  text-align: right;
+  color: rgb(0, 0, 0);
+}
+.time {
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(0, 0, 0);
+  font-size: smaller;
+  font-weight: 50;
+  grid-column: 1/5;
+  grid-row: 1/3;
+  margin-top: 0.75vh;
+  margin-left: 1vh;
+}
+
+@media (max-width: 480px) {
+  .banner {
+    width: 100vw;
+    height: 100vh;
+    background-color: #ffffff00;
+    backdrop-filter: blur(0px);
+    display: grid;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(20, 1fr);
   }
   h1 {
-    font-family: "Audiowide", sans-serif;
-    font-size: 180px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    grid-row: 1/21;
-    grid-column: 1/21;
-    // border: 1px white solid;
-    color: rgba(255, 255, 255, 0);
-    -webkit-text-stroke: #ffffff;
-    -webkit-text-stroke-width: 0.5px;
+    font-size: 60px;
+    // grid-row: 1/13;
+    // grid-column: 1/21;
+  }
+  .time {
+    color: rgb(255, 255, 255);
+    grid-column: 1/12;
+    margin: 10px;
+    grid-column: 10/21;
+    text-align: right;
+  }
+  .portfolio-004 {
+    text-align: right;
+    grid-column: 13/21;
+    margin: 10px;
+    display: none;
   }
   .horizontal-line {
-    border-bottom: 1px solid #ffffff;
-    width: 100vw;
   }
   .first {
     grid-column: 1/21;
-    grid-row: 2;
+    grid-row: 4;
   }
   .second {
     grid-column: 1/21;
-    grid-row: 18;
-  }
-  .menu {
-    font-family: Arial, Helvetica, sans-serif;
-    grid-column: 20/21;
-    grid-row: 1/3;
-    display: flex;
-    justify-content: baseline;
-    margin-top: 0.5vh;
-    margin-left: 0vh;
-    color: white;
-  }
-  .portfolio-004 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 50;
-    grid-column: 10/16;
-    grid-row: 1/3;
-    margin-top: 0.5vh;
-    color: white;
-  }
-  .time {
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    font-size: smaller;
-    font-weight: 50;
-    grid-column: 1/5;
-    grid-row: 1/3;
-    margin-top: 0.75vh;
-    margin-left: 1vh;
+    grid-row: 16;
   }
 }
