--- a/portfolio004-1/src/projects/projects.scss
+++ b/portfolio004-1/src/projects/projects.scss
@@ -1,26 +1,85 @@
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+
+#home {
+  position: absolute;
+}
+
 #scroll-section-outer {
   overflow-x: hidden;
   position: relative;
+  display: none;
+  // background: linear-gradient(
+  //   to right,
+  //   rgb(0, 0, 0),
+  //   white 80%
+  // ); /* Change the linear gradient on hover to fully white */
 }
 #scroll-section-inner {
   height: 100vh;
   // width: 500vw;
   display: flex;
   flex-wrap: nowrap;
-
-  // flex-direction: row;
+}
+#press-start {
+  top: 70%;
+  left: 44.3%;
+  right: 46.3%;
+  bottom: 30%;
+  text-align: center;
+  margin: auto;
+  position: absolute;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  z-index: 4;
+  border: 1px black solid;
+  border-radius: 30px;
+  padding: 1.5rem;
+}
+#press-start:hover {
+  border: 1px rgb(255, 255, 255) solid;
 }
 #project-start {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
 }
+#section-start {
+  // backdrop-filter: blur(30px);
+  // background-color: #ffffff2f;
+  // // border: 1px black solid;
+  padding: 5vh;
+  // border-radius: 100%;
+
+  font-family: "Audiowide", sans-serif;
+
+  color: rgba(255, 255, 255, 0.655);
+  font-size: 6vh;
+  opacity: 0;
+  text-align: center;
+}
+#project-last {
+  width: 100vw;
+  height: 100vh;
+  background: white;
+}
+
 .prj {
   height: 100vh;
   width: 100vw;
   display: grid;
   grid-template-columns: repeat(39, 1fr);
   grid-template-rows: repeat(23, 1fr);
-  border: 1px solid red;
+
+  .anim-1,
+  .anim-2,
+  .specs {
+    z-index: 4;
+  }
   h3 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
@@ -31,14 +90,11 @@
     height: 100%;
     width: 100%;
     background-color: #00445238;
+    // background-color: #0491ad38;
+
     backdrop-filter: blur(30px);
-    // border: 2px solid;
-    // border-image: linear-gradient(to bottom right, white, transparent) 1;
-    // border-radius: 30px;
-    /* Adjust the gradient direction and colors as needed */
-    // opacity: 0.95;
     border-radius: 30px;
-    z-index: -1;
+    z-index: 1;
   }
   .prj-main-border {
     grid-row: 3/22;
@@ -48,7 +104,7 @@
     z-index: 4;
   }
 
-  .menu {
+  .prj-view-title {
     color: white;
     grid-row: 6/8;
     grid-column: 21/29;
@@ -56,6 +112,8 @@
     text-align: right;
     font-weight: 100;
     font-size: 1.5vw;
+    z-index: 4;
+
     .cross {
       height: 20%;
       width: auto;
@@ -77,33 +135,6 @@
     font-size: 1.5vw;
   }
 
-  .prj-view-title {
-    color: white;
-    grid-row: 8/10;
-    grid-column: 21/29;
-    margin: 1vw 0vw 0 0.5vw;
-    text-align: right;
-    font-weight: 100;
-    font-size: 1.5vw;
-  }
-  .prj-forward-button {
-    grid-row: 20/24;
-    grid-column: 35/38;
-    height: 80%;
-    width: 80%;
-    margin: -0.1vh 0vh 0 -4.5vh;
-    z-index: 1;
-  }
-  .prj-backward-button {
-    grid-row: 20/24;
-    grid-column: 29/32;
-    margin: -0.1vh 0 0 -2.7vh;
-
-    height: 80%;
-    width: 80%;
-
-    z-index: 1;
-  }
   .info {
     // in use
     grid-row: 13/20;
@@ -130,15 +161,17 @@
     font-weight: 200;
     z-index: 3;
     text-transform: capitalize;
+    font-family: Arial, Helvetica, sans-serif;
   }
   .horizontal-line {
     // in use
     width: 100%;
+    z-index: 4;
 
     margin: 0vw 0vw 0 0.5vw;
 
     background-color: #ffffff;
-    height: 5%;
+    height: 1%;
     // border: 1px solid #000; /* Set border color and style */
     // grid-row: 12;
     // grid-column: 4/24;
@@ -148,6 +181,7 @@
     grid-column: 12/20;
     margin-left: -0.5vw;
     margin-top: 3.5vh;
+    background-color: #ffffff;
   }
   .image-section {
     grid-row: 3/15;
@@ -168,6 +202,7 @@
     margin: 1.5vw;
     font-size: 0.85vw;
     font-weight: 900;
+    z-index: 5;
   }
   #spec {
     // border: 2px solid #000000;
@@ -177,6 +212,7 @@
     padding: 0.8vw;
     border: 1px white solid;
     border-radius: 25px;
+    z-index: 5;
   }
   #spec-title {
     grid-row: 18/19;
@@ -212,5 +248,85 @@
     align-items: end;
     text-align: end;
     place-items: end;
+  }
+}
+
+@media (max-width: 480px) {
+  .prj {
+    height: 100%;
+    width: 100%;
+    // border: 1px red solid;
+    .prj-main-body {
+      grid-row: 3/22;
+      grid-column: 4/36;
+      // border-radius: 10px;
+    }
+    .prj-main-border {
+      grid-row: 3/22;
+      grid-column: 5/36;
+      display: none;
+    }
+    .image-section {
+      grid-row: 3/11;
+      grid-column: 4/36;
+      border-radius: 30px 30px 0 0px;
+      height: 100%;
+      width: 100%;
+    }
+    .prj-view-title {
+      grid-row: 12/15;
+      grid-column: 19/34;
+      font-size: 50px;
+      .cross {
+        height: 30px;
+        width: auto;
+        margin-left: 5px;
+      }
+    }
+    #spec {
+      display: none;
+    }
+    #spec-title {
+      display: none;
+    }
+    .title {
+      grid-row: 16/21;
+      grid-column: 7/12;
+      font-size: 30px;
+      align-items: end;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    #stroke {
+      -webkit-text-stroke: #ffffff;
+      color: #ffffff;
+    }
+
+    #project-start {
+      width: 150vw;
+      height: 100vh;
+      background: linear-gradient(
+        to right,
+        rgba(255, 255, 255, 0),
+        white 20%
+      ); /* Change the linear gradient on hover to fully white */
+    }
+    .info {
+      display: none;
+    }
+    .start {
+      display: none;
+    }
+    .number {
+      font-size: 20px;
+      grid-column: 19/34;
+      margin-right: 3vw;
+    }
+    #spec-line {
+      grid-column: 8;
+      display: none;
+    }
+    .title-line {
+      display: none;
+    }
   }
 }
