--- a/portfolio004-1/src/App.scss
+++ b/portfolio004-1/src/App.scss
@@ -1,3 +1,5 @@
+// html and body global
+
 html,
 body {
   width: 100%;
@@ -9,27 +11,20 @@ body {
   overscroll-behavior: none;
   font-family: Arial, Helvetica, sans-serif;
 }
-// .background-mask {
-//   backdrop-filter: blur(4px);
-
-// }
+// homepage
 .homepage-body {
-  // display: grid;
   width: 100vw;
   height: 100vh;
-  // background-color: #24242400;
-  // grid-template-columns: repeat(24, 1fr);
-  // grid-template-rows: repeat(24, 1fr);
   top: 0;
   left: 0;
   margin: 0;
+  // p elements
   p {
-    // grid-column: 1/24;
-    // grid-row: 1/24;
     font-size: 10rem;
     color: rgba(255, 255, 255, 0);
   }
 }
+// background
 .background {
   position: fixed;
   top: 0;
@@ -40,23 +35,16 @@ body {
   scroll-behavior: none;
   overflow: hidden;
 }
+// mask
 .background-mask {
   position: fixed;
   top: 0;
   left: 0%;
   width: 100vw;
   height: 100vh;
-  // background-color: hsla(66, 23%, 25%, 0.208);
   backdrop-filter: blur(0px);
-  // background-image: url("/images/blue-transparent-three-dimensional-block-diagram-technology-background-thumbnail.jpeg");
-  // background-image: url("images/paper-theme.png");
-  // background-image: url("https://www.premiumbeat.com/blog/wp-content/uploads/2022/07/25-FREE-Glass-Textures.jpg");
+
   opacity: 100%;
   background-size: cover;
   z-index: 0;
-  // background-blend-mode: color-burn;
 }
-// .about {
-//   width: 100vw;
-//   height: 100vh;
-// }
