--- a/portfolio004-1/src/about/about.scss
+++ b/portfolio004-1/src/about/about.scss
@@ -1,43 +1,99 @@
+
+
+// body
 .about-body {
   height: 100vh;
   width: 100vw;
-  background-color: white; // backdrop-filter: blur(150px);
+  background-color: rgb(255, 255, 255); 
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
+  padding-top: 10vh;
   opacity: 0;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  // height: 100%;
-  // overflow: hidden;
+  z-index: 1;
+  overflow-x: hidden;
 
+// photo
   #about-photo {
-    width: 20%;
+    grid-row: 5/7;
+    grid-column: 6/10;
+    width: 100%;
+    min-width: 350px;
     height: auto;
-    // object-fit: cover;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px rgb(57, 57, 57); /* Apply box shadow effect */
+    z-index: 3;
+    
+    border: 1px solid black;
+    padding: 50px;
   }
+  // bio
   .about-bio {
-    text-align: center;
-    margin: 10vh 30vw 0 30vw;
+  
     font-size: larger;
-    font-kerning: none;
     font-weight: 500;
-    color: grey;
+    color: rgb(45, 45, 45);
+    grid-row: 9/13;
+    grid-column: 3/8;
+    z-index: 4;
   }
+  // line
   .line {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-
     opacity: 0;
     transform: translateY(-5px);
     transition: transform 0.1s;
   }
+  // scroll
   .scroll {
     position: fixed;
     top: 0;
     left: 46%;
-    z-index: 3;
+    z-index: 10;
     width: 100%;
+  }
+  // title
+  #title {
+    grid-row: 6/12;
+    grid-column: 1/12;
+    font-size: 500px;
+    z-index: 1;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  // small screen
+  @media (max-width: 1100px) {
+    // body
+    .about-body {
+      overflow: hidden;
+    }
+    // bio
+    .about-bio {
+      grid-row: 2/10;
+      grid-column: 2/12;
+      font-size: 20px;
+      border: 1px solid black;
+      padding: 30px;
+      font-weight: 600;
+      border-radius: 25px;
+      background-color: rgba(255, 255, 255, 0.649);
+      text-align: left;
+    }
+    // title
+    #title {
+      font-size: 110px;
+      grid-row: 1/3;
+      grid-column: 2/12;
+    }
+    // photo
+    #about-photo {
+      grid-row: 7/13;
+      grid-column: 5/10;
+      min-width: 10px;
+      max-width: 140px;
+      z-index: 5;
+      height: 140px;
+      border: 0px;
+      border-radius: 150px;
+      border: 1px solid black;
+    }
   }
 }
