--- a/portfolio004-1/src/contact/contact.scss
+++ b/portfolio004-1/src/contact/contact.scss
@@ -1,31 +1,33 @@
-// @import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
-.contact-body {
-  color: rgb(255, 255, 255);
-  background: linear-gradient(to top, rgba(255, 255, 255, 0) 50%, white 99.9%);
-  width: 100vw;
+// contct body
 
-  height: 150vh;
+.contact-body {
+  color: rgb(0, 0, 0);
+  width: 100vw;
+  background-color: white;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  // contact container
   .contact-container {
-    margin-top: 33%;
-    backdrop-filter: blur(15px);
-    background-color: #24242400;
     padding: 10vh;
-
+    border-radius: 60px;
+    border: 1px solid black;
+// h1 elements
     h1 {
       font-family: "Audiowide", sans-serif;
       text-align: center;
       font-size: 30px;
-      color: white;
+      color: rgb(0, 0, 0);
     }
+    // contact sections
     #contacts {
       display: flex;
       flex-direction: row;
       justify-content: center;
       align-items: center;
+      // h3 and a elements
       h3,
       a {
         border: 1px rgb(0, 0, 0) solid;
@@ -36,14 +38,15 @@
         font-weight: 400;
         color: inherit;
         text-decoration: none;
-        // cursor: auto;
       }
-
+// a hover transitions
       a:hover {
         border: 1px rgb(255, 255, 255) solid;
       }
     }
-    @media (max-width: 480px) {
+    // smaller screen 
+    @media (max-width: 840px) {
+      // contact sections
       #contacts {
         margin: 0 -200px 0 -200px;
         display: flex;
@@ -51,16 +54,16 @@
         justify-content: center;
         align-items: center;
       }
+      // section elements
       .section {
-        padding: 10vw;
+        padding: 35px;
       }
     }
   }
 }
-@media (max-width: 480px) {
+// smaller screen sections
+@media (max-width: 840px) {
   .contact-body {
     height: 100vh;
-    .contact-container {
-    }
   }
 }
