--- a/src/about/about.scss
+++ b/src/about/about.scss
@@ -1,10 +1,8 @@
-
-
 // body
 .about-body {
   height: 100vh;
   width: 100vw;
-  background-color: rgb(255, 255, 255); 
+  background-color: rgb(255, 255, 255);
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
@@ -13,7 +11,7 @@
   z-index: 1;
   overflow-x: hidden;
 
-// photo
+  // photo
   #about-photo {
     grid-row: 5/7;
     grid-column: 6/10;
@@ -21,13 +19,12 @@
     min-width: 350px;
     height: auto;
     z-index: 3;
-    
+    opacity: 0;
     border: 1px solid black;
     padding: 50px;
   }
   // bio
   .about-bio {
-  
     font-size: larger;
     font-weight: 500;
     color: rgb(45, 45, 45);
