--- a/src/contact/contact.scss
+++ b/src/contact/contact.scss
@@ -9,12 +9,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   // contact container
   .contact-container {
     padding: 10vh;
     border-radius: 60px;
     border: 1px solid black;
-// h1 elements
+    // h1 elements
     h1 {
       font-family: "Audiowide", sans-serif;
       text-align: center;
@@ -39,12 +40,12 @@
         color: inherit;
         text-decoration: none;
       }
-// a hover transitions
+      // a hover transitions
       a:hover {
         border: 1px rgb(255, 255, 255) solid;
       }
     }
-    // smaller screen 
+    // smaller screen
     @media (max-width: 840px) {
       // contact sections
       #contacts {
