--- a/src/projects/projects.scss
+++ b/src/projects/projects.scss
@@ -144,7 +144,7 @@ a:hover {
       padding-right: -0.4vw;
     }
   }
-// info
+  // info
   .info {
     grid-row: 13/20;
     grid-column: 21/29;
@@ -186,7 +186,7 @@ a:hover {
     margin-top: 3.5vh;
     background-color: #ffffff;
   }
-// image section
+  // image section
   .image-section {
     grid-row: 3/15;
     grid-column: 11/22;
@@ -239,7 +239,7 @@ a:hover {
     width: 1%;
     height: 100%;
   }
-// number for section
+  // number for section
   .number {
     grid-row: 20;
     grid-column: 28;
@@ -283,7 +283,7 @@ a:hover {
       grid-row: 12/15;
       grid-column: 19/34;
       font-size: 20px;
-    // view cross
+      // view cross
       .cross {
         height: 20px;
         width: auto;
@@ -312,15 +312,11 @@ a:hover {
       -webkit-text-stroke: #ffffff;
       color: #ffffff;
     }
-// project container
+    // project container
     #project-start {
       width: 150vw;
       height: 100vh;
-      background: linear-gradient(
-        to right,
-        rgba(255, 255, 255, 0),
-        white 20%
-      );
+      background: linear-gradient(to right, rgba(255, 255, 255, 0), white 20%);
     }
     // info
     .info {
@@ -350,6 +346,7 @@ a:hover {
   #press-start {
     padding: 1.5vw;
     font-size: 15px;
+    margin-left: 44.5vw;
     border: none;
     text-align: center;
   }
@@ -357,7 +354,7 @@ a:hover {
   #press-start:hover {
     border: none;
   }
-// view button
+  // view button
   .prj-view-title {
     font-size: 20px;
     font-size: 0.5vw;
